---------------------------------------------------------------------------------------------------
Version: 0.27.3
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.27.2
Date: 2024-01-17
  Bugfixes:
    - Fix crash if another mod deletes an entity immediately it is created.
---------------------------------------------------------------------------------------------------
Version: 0.27.1
Date: 2023-12-28
  Bugfixes:
    - The "auto-landfill" option now respects the selected tile.
    - Rotating an inserter will also rotate custom pickup/drop locations.
---------------------------------------------------------------------------------------------------
Version: 0.27.0
Date: 2023-12-14
  Features:
    - You can now select a specific tile to be used for landfill (or other purposes)
---------------------------------------------------------------------------------------------------
Version: 0.26.2
Date: 2023-12-14
  Bugfixes:
    - Adjustable inserters: Fix pasting rotated blueprints with inserters having adjusted positions
---------------------------------------------------------------------------------------------------
Version: 0.26.1
Date: 2023-12-02
  Bugfixes:
    - Fix migration in some cases from earlier than 0.16.0
---------------------------------------------------------------------------------------------------
Version: 0.26.0
Date: 2023-11-21
  Changes:
    - Added better support for modded pipes
    - Added support for Bob's adjustable inserters
    - Flexible offshore pump placement now works for modded offshore pumps
    - *Slightly* better support for modded entities in general
---------------------------------------------------------------------------------------------------
Version: 0.25.2
Date: 2023-11-07
  Bugfixes:
    - Fix crash when using Factorio v1.1.95 (experimental)