@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.27.3
 Date: ????
-  Changes:
+  Bugfixes:
+    - Fix compatibility with modded tanks (e.g. Angel's petrochem valves).
 ---------------------------------------------------------------------------------------------------
 Version: 0.27.2
 Date: 2024-01-17
